// Since: cosmos-sdk 0.46
syntax = "proto3";

package atomone.gov.v1;

import "atomone/gov/v1/gov.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/atomone-hub/atomone/x/gov/types/v1";

// GenesisState defines the gov module's genesis state.
message GenesisState {
  // starting_proposal_id is the ID of the starting proposal.
  uint64 starting_proposal_id = 1;
  // deposits defines all the deposits present at genesis.
  repeated Deposit deposits = 2;
  // votes defines all the votes present at genesis.
  repeated Vote votes = 3;
  // proposals defines all the proposals present at genesis.
  repeated Proposal proposals = 4;
  // Deprecated: Prefer to use `params` instead.
  // deposit_params defines all the paramaters of related to deposit.
  DepositParams deposit_params = 5 [ deprecated = true ];
  // Deprecated: Prefer to use `params` instead.
  // voting_params defines all the paramaters of related to voting.
  VotingParams voting_params = 6 [ deprecated = true ];
  // Deprecated: Prefer to use `params` instead.
  // tally_params defines all the paramaters of related to tally.
  TallyParams tally_params = 7 [ deprecated = true ];
  // params defines all the paramaters of x/gov module.
  //
  // Since: cosmos-sdk 0.47
  Params params = 8;
  // The constitution allows builders to lay a foundation and define purpose.
  //
  // Since: cosmos-sdk 0.48
  string constitution = 9;

  // last updated value for the dynamic min deposit
  LastMinDeposit last_min_deposit = 10;

  // last updated value for the dynamic min initial deposit
  LastMinDeposit last_min_initial_deposit = 11;
  
  // governance participation EMA
  // If unset or set to 0, the quorum for the next proposal will be set to the
  // params.MinQuorum value.
  string participation_ema = 12 [(cosmos_proto.scalar) = "cosmos.Dec"];
  
  // governance participation EMA for constitution amendment proposals.
  // If unset or set to 0, the quorum for the next constitution amendment
  // proposal will be set to the params.MinConstitutionAmendmentQuorum value.
  string constitution_amendment_participation_ema = 13 [(cosmos_proto.scalar) = "cosmos.Dec"];

  // governance participation EMA for law proposals.
  // If unset or set to 0, the quorum for the next law proposal will be set to
  // the params.LawMinQuorum value.
  string law_participation_ema = 14 [(cosmos_proto.scalar) = "cosmos.Dec"];
}
